--- a/css/style.css
+++ b/css/style.css
@@ -58,6 +58,13 @@ h2 {
     color: #777;
 } 
 
+h3 {
+    font-family: "Lane-Narrow", Arial; 
+    font-size: 150%; 
+    margin: 0px;
+    color: #000;
+} 
+
 #dp {
     float: left;
     margin: 10px;
@@ -69,6 +76,29 @@ h2 {
 
 .social-ico {
     margin: 5px;
+}
+
+#proj-wrap {
+    margin:0 auto;
+	padding: 50px;
+	position:relative;
+}
+
+.proj-box {
+    height: 340px;
+    width: 240px;
+    margin: 10px;
+    padding: 20px;
+    float: left;
+    opacity: 0.7;
+}
+
+.proj-box:hover {
+    opacity: 1.0;
+}
+
+.proj-img {
+    margin: 0px 0px 10px 0px;
 }
 
 .slide{
