--- a/css/style.css
+++ b/css/style.css
@@ -72,6 +72,8 @@ h3 {
 
 #social {
     padding: 100px;
+    width: 100%;
+    margin: 0 auto;    
 }
 
 .social-ico {
@@ -99,6 +101,16 @@ h3 {
 
 .proj-img {
     margin: 0px 0px 10px 0px;
+}
+
+#resume {
+    width: 50%;
+    margin: 0 auto;
+}
+
+#resume-ico{
+    width: 50%;
+    margin: 0 auto;
 }
 
 .slide{
