--- a/css/style.css
+++ b/css/style.css
@@ -113,6 +113,12 @@ h3 {
     margin: 0 auto;
 }
 
+#about {    
+    width: 80%;
+    margin: 0 auto;
+    padding: 100px;
+}   
+
 .slide{
 	background-attachment: fixed;
 	width:100%;
