--- a/css/style.css
+++ b/css/style.css
@@ -161,5 +161,34 @@ h3 {
 	cursor:pointer;
 }
 
+#go-up{
+	display:block;
+	width:76px;
+	height:76px;
+	position:absolute;
+	top:30px;
+	left:90%;
+	background-color:#EEE8E8;
+	background-image:url(../img/up.svg);
+    opacity: 0.5;
+    
+	/* rounded corners */
+	-webkit-border-radius: 36px;
+	-moz-border-radius: 36px;
+	border-radius: 36px;    
+}
+
+#go-up:hover{
+    opacity: 0.7;
+	background-color:#E6ECEC;
+	cursor:pointer;
+}
+
+#go-up-txt {
+    opacity: 0.5;
+    position: absolute;
+    top: 16%;
+    right: 3%;
+}
 
 
